--- a/css/tariffs.css
+++ b/css/tariffs.css
@@ -6,22 +6,17 @@
 .tariffs__offer {
   position: relative;
 
-  width: 280px;
+  max-width: 280px;
+  width: 100%;
+  min-width: 120px;
   height: 840px;
 
   display: inline-block;
   padding: 20px;
   border: 1px solid #bbbbbb;
-  margin: 0 13.5px;
+  margin: 0 13.5px 30px 13.5px;
   vertical-align: top;
   text-align: center;
-}
-
-.tariffs__offer:first-of-type {
-  margin-left: 0;
-}
-.tariffs__offer:last-of-type {
-  margin-right: 0;
 }
 
 .offer__title {
@@ -48,7 +43,10 @@
 .offer__footer {
   position: absolute;
   bottom: 50px;
-  left: 19%;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .offer__sales {
@@ -84,5 +82,4 @@
 
 .tariffs__offer_free .offer__footer {
   bottom: 33px;
-  left: 23%;
 }
