--- a/css/tariffs.css
+++ b/css/tariffs.css
@@ -14,7 +14,7 @@
   display: inline-block;
   padding: 20px;
   border: 1px solid #bbbbbb;
-  margin: 0 13.5px 30px 13.5px;
+  margin: 0 14px 30px 14px;
   vertical-align: top;
   text-align: center;
 }
@@ -42,7 +42,7 @@
 
 .offer__footer {
   position: absolute;
-  bottom: 50px;
+  bottom: 49px;
   width: 80%;
   text-align: center;
   left: 50%;
@@ -65,12 +65,13 @@
   background: #bd0231;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
   border-radius: 50px;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 16px;
   line-height: 22px;
   text-align: center;
   color: #ffffff;
   transition: 0.3s;
+  letter-spacing: 0.9px;
 }
 .offer__btn:hover {
   border: 1px solid #bd0231;
